* Fixed potential crash in tXMMSPlayer::getPlayList,
  when XMMS would return an unexpected NULL.
+ Added tPlayer::getPlayListLength and implementations to simplify 
  AutoDJ process.
* Fixed a crash when trying to edit a tag and no song is selected.
* Make sure XMMS doesn't get started automatically. [done]
* Made sure AutoDJ works on 64 bit, applied Kyle Liddell's patch. [done]

0.93 --------------------------------------------------------------------------

---> See 0.93 CVS branch for changes leading up to the 0.93 release.

* Removed 3.2 dependency of UI files.
* Added flags that allow to add custom include and library paths.
  (Daryl Anderman) [done]
* Playlists can't scroll past the end any more. [done]

0.93rc2 -----------------------------------------------------------------------
+ A my_cxx build option was added. [done]
+ Validated compilation with only a c++ compiler, especially for vcedit.c.
  [done]
* Fixed README to state correct dependencies. [done]
* Removed ctags from default build. [done]
* About dialog shouldn't talk about Musepack/MPC when it's not actually 
  there. [done]
* Attempted to fix non-reproducible crasher within XMMS libraries through
  better error checking. [done]
* Fix crasher when removing from empty directory list. (Tim Dreessen)
  [done]
* Rescan no longer adds duplicate copies of songs. (Tim Dreessen)
  [done]
* Plugins directory was missing from the release tarball. (Tim Dreessen)
  [done]

0.93rc1 -----------------------------------------------------------------------
MAJOR CHANGES:
* Auto Tagger. [done]
* Changed build system to SCons. [done]
* Minimize to system tray. [done]
+ Add passive popup song announcements. [done]
* Made search substantially faster. [done]
- Removed fuzzy search misfeature. [done]
+ Visually indicate current song. [done]
+ Select visible columns per list view, not in preferences. [done]
* Unify madmanweb through song field identifier methods. [done]
* Rewrote AutoDJ. (Shawn Willden) [done]
